# dirInfoMonitor

./: Makefile.am  README.md  configure.ac
etc/: Makefile.am  arc_dclog.sh  dcrotated  dircounter.conf  dircounter.list
inc/: atomic.h  bio.h  cJSON.h  config.h  dump.h  header.h  headercxx.h  inotify_process.h  kv.h  log.h  monitor_dir.h  shm_api.h  sig.h  spd_readdir.h  util.h
libinotifytools/inc/: inotify-nosys.h  inotifytools.h  inotifytools_p.h  redblack.h
libinotifytools/src/: Makefile.am  example.c  ino_dir_mg.cpp  inotifytools.c  redblack.c  test.c
src/: Makefile.am  bio.c  cJSON.c  config.cpp  dump.cpp  inotify_process.cpp  kv.cpp  log.cpp  main.cpp  monitor_dir.cpp  readdir.c  shm.c  sig.cpp  util.cpp
